change page title and intendation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script>window.SARAs_data = window.SARAs_data || [];
+    <script>
+    window.SARAs_data = window.SARAs_data || [];
         SARAs_data = [{
             page: {
                 attributes: {
@@ -12,7 +13,7 @@
                         route: "article"
                     }
                 },
-                pageTitle: "<<pageName>>",
+                pageTitle: "{{pageName}}",
                 paywall: {
                     attributes: {
                         is_active: false
@@ -35,7 +36,7 @@
     
     </script>
 <script src="./launch-3478e238f3485-development.min.js" async></script>
-    <title>Document</title>
+    <title>sp-weathercheck</title>
 </head>
 <body>
 
